tests/baselines/reference/superAccessInFatArrow1.errors.txt
superAccessInFatArrow1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== superAccessInFatArrow1.ts (1 errors) ====
    module test {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class A {
            foo() {
            }
        }
        export class B extends A {
            bar(callback: () => void ) {
            }
            runme() {
                this.bar(() => {
                    super.foo();
                });
            }
        }
    }